# chroma-viz

./: .gitignore  CMakeLists.txt  Makefile  README.md  chroma-viz.c  conf.json  go.mod  go.sum  gui_test.go  main.go  temp-15.json
.github/workflows/: format.yml  linux.yml
artist/: Clock.json  Clock2.json  Graph.json  Lower_Frame.json  Lower_Frame2.json  Lower_Frame_Anim.json  Lower_Frame_Image.json  Simple_Clock.json  Teal-Box.json  Template 13.json  Template 3.json  Template 8.json  Test.json  Ticker.json  White-Circle.json  artist.json  assets.json  conf.json  config.go  default_conf.json  engine-widget.go  geo.go  gui.go  gui.ui  hub_tree.go  lower_frame.json  menu.ui  preview.go  temp_tree.go  temp_util.go  test.json  test_template.json  test_template1.json
attribute/: attr.go  clock.go  color.go  float.go  int.go  list.go  string.go
c_archive/: CMakeLists.txt  chroma-output.c  graphic.h  graphic_encode_decode.c  tcp.h
c_archive/chroma-engine/: chroma-engine.h  chrome-engine.c  tcp-server.c
c_archive/chroma-hub/: chroma-hub.h
c_archive/chroma-viz/: chroma-output.c  chroma-prototypes.h  chroma-typedefs.h  chroma-viz.c  chroma-viz.h  editor.c  keymap.c  lower_bar.c  preview.c  show.c  show_io.c
c_archive/shows/: basic_show.chromashow  test_show.chromashow
cmd/artist/: main.go  (+1 more)
editor/: editor.go
gtk/: artist-gui.ui  artist-hub.ui  artist-menu.ui  viz-gui.ui
gui/: editor.go  engine-widget.go  gui.go  layout.ui  page.go  preview.go  props.go  show.go  tcp.go  templates.go
hub/: archive.json  chroma-hub.go  chroma_hub.sql  db.go  gen.go  geo.go  hub_test.go  keyframe.go  sql.mwb  sql.mwb.bak  template.go  test_archive.json  test_keyframe.json  test_lower.json
perf/: db_perf.txt  hub_perf.sh  perf.sh  viz_perf.sh
props/: circle.go  clock.go  editor.go  graph.go  image.go  page.go  props.go  rect.go  template.go  text.go  ticker.go  video.go
shows/: Clock.json  Teal Box.json  Ticker.json  basic_show.chromashow  img.json  img.show  large-show.show  page.go  show.go  show_test.go  simple.show  test.json  testing.show
src/: chroma-output.c  chroma-prototypes.h  chroma-renderer.c  chroma-theme.h  chroma-typedefs.h  chroma-viz.c  chroma-viz.h  editor.c  preview.c  show.c  templates.c
tcp/: tcp.go
templates/: parser.go  temp_test.go  template.go  test.json
viz/: conf.json  conf1.json  conf2.json  config.go  default_conf.json  editor.go  engine-widget.go  gui.go  parser.go  preview.go  preview_conf.toml  show_tree.go  temp_tree.go  viz_test.go
(+31 files in other folders)
