# cmake -S . -B build/

CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")

PROJECT(chroma-viz)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# Link against gtk
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK REQUIRED gtk4)
INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})

# Add source files
FILE(GLOB SOURCES ${PROJECT_SOURCE_DIR}/*.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES}) 
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GTK_LIBRARIES})
