# cmake -S . -B build/

CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wpedantic")

PROJECT(chroma-viz)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# Link against gtk
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(RAYLIB REQUIRED raylib)
INCLUDE_DIRECTORIES(${RAYLIB_INCLUDE_DIRS})

# Add source files
FILE(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.c)
FILE(GLOB HEADERS ${PROJECT_SOURCE_DIR}/src/*.h)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS}) 
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${RAYLIB_LIBRARIES})
