# cmake -S . -B build/

CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wpedantic")

PROJECT(chroma)
SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

# Link against gtk
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(RAYLIB REQUIRED raylib)
INCLUDE_DIRECTORIES(${RAYLIB_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/src/chroma-engine ${PROJECT_SOURCE_DIR}/src/chroma-viz)

# Add source files
FILE(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.c)
FILE(GLOB HEADERS ${PROJECT_SOURCE_DIR}/src/*.h)

FILE(GLOB VIZ_SOURCES ${PROJECT_SOURCE_DIR}/src/chroma-viz/*.c)
FILE(GLOB VIZ_HEADERS ${PROJECT_SOURCE_DIR}/src/chroma-viz/*.h)

FILE(GLOB ENGINE_SOURCES ${PROJECT_SOURCE_DIR}/src/chroma-engine/*.c)
FILE(GLOB ENGINE_HEADERS ${PROJECT_SOURCE_DIR}/src/chroma-engine/*.h)

ADD_EXECUTABLE(chroma-viz ${SOURCES} ${HEADERS} ${VIZ_SOURCES} ${VIZ_HEADERS}) 
TARGET_LINK_LIBRARIES(chroma-viz PRIVATE ${RAYLIB_LIBRARIES})

ADD_EXECUTABLE(chroma-engine ${SOURCES} ${HEADERS} ${ENGINE_SOURCES} ${ENGINE_HEADERS}) 
TARGET_LINK_LIBRARIES(chroma-engine PRIVATE ${RAYLIB_LIBRARIES})
